Established environment connection
