# rtcms4j-core-server/src/main/kotlin/ru/enzhine/rtcms4j/core/service/internal/ConfigurationService.kt
@@ -86,4 +86,12 @@ interface ConfigurationService {
         applicationId: Long,
         configurationId: Long,
     ): List<ConfigurationCommit>
+
+    @Throws(ConditionFailureException.NotFound::class)
+    fun deleteConfigurationCommit(
+        namespaceId: Long,
+        applicationId: Long,
+        configurationId: Long,
+        commitId: Long,
+    ): Boolean
 }
